# prot2token_pkg

./: README.md  helper_script.py  packaging.md  pyproject.toml  requirements.txt
ckpt/stability/: config.yaml  decoder_tokenizer.yaml
src/prot2token/: models.py  run.py  utils.py
src/prot2token.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
